# dbt-serverless

./: .dockerignore  .env.template  .gitignore  404.html  Dockerfile  LICENSE.txt  Makefile  README.md  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  objects.inv  profiles.yml  pyproject.toml
.github/workflows/: docker.yml  pages.yml  publish.yml  python.yml  terraform.yml
config/: logging.yml
dbt_serverless/: config.py  main.py
dbt_serverless/lib/: docs_helper.py  file_helpers.py  subprocess_helpers.py
docs/: index.md
docs/reference/: SUMMARY.md  config.md
docs/reference/lib/: docs_helper.md
examples/: .env.template  Dockerfile.dbt  README.md  main.tf
iac/: github_actions.tf  github_secret.tf  iam.tf  locals.tf  main.tf  project.tf  provider.tf  service_account.tf  variables.tf
iac-pulumi/: main.py
iac-pulumi/lib/: github_actions.py  iam.py  service_account.py  variables.py
iac-pulumi/resources/: cicd.txt  services.txt
includes/: python.mk  terraform.mk
reference/SUMMARY/: index.html
reference/lib/file_helpers/: index.html
reference/lib/subprocess_helpers/: index.html
reference/main/: index.html
search/: search_index.json
tests/: main_test.py  test_file_helpers.py  test_main.py  test_subprocess_helpers.py
